# secret-template

./: .gitignore  Cargo.toml  Developing.md  Makefile  NOTICE  README.md
.cargo/: config
examples/: schema.rs
src/: contract.rs  error.rs  msg.rs  state.rs
tests/: README.md  integration.ts  package-lock.json  package.json
