[package]
name = "secret-template-cw1"
version = "0.1.0"
authors = ["laura <laura@secretchaingirl.io>"]
edition = "2021"
description = "A simple counter contract template for Secret Network"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
default = []
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-std = { git = "https://github.com/scrtlabs/cosmwasm", branch = "secret" }
cosmwasm-storage = { git = "https://github.com/scrtlabs/cosmwasm", branch = "secret" }
schemars = "0.8.1"
serde = { version = "1.0.114", default-features = false, features = ["derive"] }
thiserror = { version = "1.0" }

# [dev-dependencies]
cosmwasm-schema = "1.0.0"
